# OpenCL_experiments

./: CMakeLists.txt  dot.cpp  main.cpp  sqrt.cpp
